--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
             <!--Cloudstack Links-->
             <section>
                 <h2>Cloudstack Links</h2>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://bloglist.github.io/What-is-Reclaim-and-Should-You-Smoke-It-/">https://bloglist.github.io/What-is-Reclaim-and-Should-You-Smoke-It-/</a><br>
+                <a target="_bLank" href="https://goldenleafllc.s3.us-east-005.backblazeb2.com/What+is+Reclaim+and+Should+You+Smoke+It%3F/index.html">https://goldenleafllc.s3.us-east-005.backblazeb2.com/What+is+Reclaim+and+Should+You+Smoke+It%3F/index.html</a><br>
+                <a target="_bLank" href="https://what-is-reclaim-and-should-you-s-git-83f512-bloglist1s-projects.vercel.app/">https://what-is-reclaim-and-should-you-s-git-83f512-bloglist1s-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://superlative-boba-d38681.netlify.app/">https://superlative-boba-d38681.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
